# WinSnap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  out.txt  pyproject.toml  risk_engine.md  tree.txt  vision.txt  winsnap  winsnap.cmd
.github/workflows/: ci.yml  publish.yml
archive/: markdown_export.py  risk_hints.py
docs/: SCHEMA.md
src/: collectors.py  diff_view.py  differ.py  inspect_view.py  main.py  process_view.py  search_view.py  snapshot_store.py  snapshot_view.py  ui.py
src/collectors/: __init__.py  powershell.py  processes.py  scheduled_tasks.py  services.py
src/commands/: __init__.py  diff.py  inspect.py  search.py  snapshots.py
src/views/: diff_view.py  inspect_view.py  process_view.py  search_view.py  snapshot_view.py
tests/: test_filtering.py  test_hashing.py  test_partial_failures.py  test_services.py  test_snapshot_store.py  test_snapshot_validation.py
winsnap/: __main__.py  artifacts.py  cli.py  differ.py  main.py  risk_hints.py  schema.py
winsnap/collectors/: __init__.py  firewall_rules.py  installed_software.py  local_groups.py  local_users.py  network_listeners.py  powershell.py  processes.py  registry_autoruns.py  scheduled_tasks.py  services.py  startup_folders.py
winsnap/commands/: __init__.py  diff.py  inspect.py  search.py  snapshots.py
winsnap/files/: __init__.py  hashing.py  resolve.py  signature.py
winsnap/filtering/: __init__.py  engine.py
winsnap/views/: diff_view.py  inspect_view.py  process_view.py  search_view.py  snapshot_view.py
