[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "winsnap"
version = "0.7.1"
description = "Lightweight Windows snapshot and change-analysis CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
winsnap = "winsnap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["winsnap*"]
